[package]
name = "dbba"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "1.1"
similar = "2.5"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
arboard = "3.3"
md-5 = "0.10"
chrono = "0.4"
async-trait = "0.1"

[[bin]]
name = "dbba"
path = "src/main.rs"
